Proyecto2/kubernetes/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: student-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: 34.29.174.71.nip.io
    http:
      paths:
      - path: /golang-service
        pathType: Prefix
        backend:
          service:
            name: golang-agro-srv
            port:
              number: 80
      - path: /rust-service
        pathType: Prefix
        backend:
          service:
            name: rust-ing-srv
            port: 
              number: 8080
